--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-21 19:27+0200\n"
-"Last-Translator: Marc <marc@infomarc.info>\n"
+"PO-Revision-Date: 2010-05-24 12:20+0200\n"
+"Last-Translator: Robert <robert_readman@hotmail.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
 "MIME-Version: 1.0\n"
@@ -4748,7 +4748,7 @@ msgid ""
 "This may cause unpredictable behavior."
 msgstr ""
 "Your PHP MySQL library version %s differs from your MySQL server version %s. "
-"This may cause unpredictable behavior."
+"This may cause unpredictable behaviour."
 
 #: main.php:358
 #, php-format
