--- a/po/it.po
+++ b/po/it.po
@@ -5973,7 +5973,7 @@ msgstr "Applica i cambiamenti selezionati"
 
 #: server_synchronize.php:451 server_synchronize.php:896
 msgid "Synchronize Databases"
-msgstr ""
+msgstr "Sincronizzare i database"
 
 #: server_synchronize.php:464
 msgid "Selected target tables have been synchronized with source tables."
