--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 $Id$
 
-phpMyAdmin - Readme
+phpMyAdmin - Readme Hey Hey
 ===================
 
   A set of PHP-scripts to manage MySQL over the web.
