Revert initial commit

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 $Id$
 
-phpMyAdmin - Readme Hey Hey
+phpMyAdmin - Readme
 ===================
 
   A set of PHP-scripts to manage MySQL over the web.
