Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -930,7 +930,7 @@ msgstr "Zur Auswahl anklicken"
 
 #: js/messages.php:26
 msgid "Click to unselect"
-msgstr "Zum Abwählen bitte anklicken"
+msgstr "Zum Abwählen anklicken"
 
 #: js/messages.php:27 libraries/import.lib.php:103 sql.php:89
 msgid "\"DROP DATABASE\" statements are disabled."
