--- a/po/de.po
+++ b/po/de.po
@@ -1768,10 +1768,9 @@ msgid "Inline edit of this query"
 msgstr "Inline-Bearbeiten dieses SQL-Befehls"
 
 #: libraries/common.lib.php:1278
-#, fuzzy
 #| msgid "Engines"
 msgid "Inline"
-msgstr "Formate"
+msgstr "Inline"
 
 #: libraries/common.lib.php:1332 libraries/common.lib.php:1347
 msgid "Profiling"
