--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 10:58+0200\n"
+"PO-Revision-Date: 2010-05-25 10:59+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -4844,7 +4844,7 @@ msgstr ""
 
 #: navigation.php:66 navigation.php:67 navigation.php:70
 msgid "Reload navigation frame"
-msgstr "Navigation-Frame aktualisieren"
+msgstr "Navigations-Frame aktualisieren"
 
 #: navigation.php:210 server_databases.php:371 server_synchronize.php:1191
 msgid "No databases"
