--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 10:59+0200\n"
+"PO-Revision-Date: 2010-05-25 11:00+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5709,9 +5709,8 @@ msgid "Full start"
 msgstr "Alles starten"
 
 #: server_replication.php:325
-#, fuzzy
 msgid "Full stop"
-msgstr "Volltext"
+msgstr "Alles stoppen"
 
 #: server_replication.php:326
 msgid "Reset slave"
