Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:06+0200\n"
+"PO-Revision-Date: 2010-05-25 11:07+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5754,7 +5754,7 @@ msgstr "Überspringe nächsten"
 
 #: server_replication.php:340
 msgid "errors."
-msgstr "Fehler"
+msgstr "Fehler."
 
 #: server_replication.php:355
 #, php-format
