--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:10+0200\n"
+"PO-Revision-Date: 2010-05-25 11:11+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5807,7 +5807,7 @@ msgstr "Transaktions-Koordinator"
 
 #: server_status.php:271
 msgid "Flush (close) all tables"
-msgstr "Den Tabellencache leeren (\"FLUSH\")"
+msgstr "Alle Tabellen aktualisieren und schließen."
 
 #: server_status.php:273
 msgid "Show open tables"
