Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -5877,7 +5877,7 @@ msgstr ""
 
 #: server_status.php:388
 msgid "Traffic"
-msgstr "Traffic"
+msgstr "Netzwerkverkehr"
 
 #: server_status.php:388
 msgid ""
