Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:16+0200\n"
+"PO-Revision-Date: 2010-05-25 11:17+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5884,9 +5884,9 @@ msgid ""
 "On a busy server, the byte counters may overrun, so those statistics as "
 "reported by the MySQL server may be incorrect."
 msgstr ""
-"Auf stark frequentierten Server kann der Byte-Zähler \"überlaufen\" (Wieder "
-"bei 0 beginnen), deshalb können diese Werte wie sie vom MySQL Server "
-"ausgegeben werden falsch sein."
+"Auf stark frequentierten Server können die Byte-Zähler \"überlaufen\" (wieder "
+"bei 0 beginnen), deshalb können diese Werte, wie sie vom MySQL Server "
+"ausgegeben werden, falsch sein."
 
 #: server_status.php:389 server_status.php:434 server_status.php:497
 #: server_status.php:555
