--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:18+0200\n"
+"PO-Revision-Date: 2010-05-25 11:19+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5958,7 +5958,7 @@ msgstr "Datenbank '%s' existiert nicht."
 
 #: server_synchronize.php:265
 msgid "Structure Synchronization"
-msgstr ""
+msgstr "Synchronisation der Struktur"
 
 #: server_synchronize.php:272
 msgid "Data Synchronization"
