Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:20+0200\n"
+"PO-Revision-Date: 2010-05-25 11:21+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5990,7 +5990,7 @@ msgstr "Spalte(n) ändern"
 
 #: server_synchronize.php:433 server_synchronize.php:876
 msgid "Remove index(s)"
-msgstr ""
+msgstr "Index/Indices entfernen"
 
 #: server_synchronize.php:434 server_synchronize.php:877
 msgid "Apply index(s)"
