--- a/po/de.po
+++ b/po/de.po
@@ -5994,7 +5994,7 @@ msgstr "Index/Indices entfernen"
 
 #: server_synchronize.php:434 server_synchronize.php:877
 msgid "Apply index(s)"
-msgstr ""
+msgstr "Index/Indices anwenden"
 
 #: server_synchronize.php:435 server_synchronize.php:878
 msgid "Update row(s)"
