--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:21+0200\n"
+"PO-Revision-Date: 2010-05-25 11:22+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5998,7 +5998,7 @@ msgstr "Index/Indices anwenden"
 
 #: server_synchronize.php:435 server_synchronize.php:878
 msgid "Update row(s)"
-msgstr ""
+msgstr "Zeile(n) updaten"
 
 #: server_synchronize.php:436 server_synchronize.php:879
 msgid "Insert row(s)"
