Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:22+0200\n"
+"PO-Revision-Date: 2010-05-25 11:23+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6006,7 +6006,7 @@ msgstr "Zeile(n) einfügen"
 
 #: server_synchronize.php:446 server_synchronize.php:890
 msgid "Would you like to delete all the previous rows from target tables?"
-msgstr ""
+msgstr "Möchten Sie alle vorhergehenden zeilen aus den Ziel-Tabellen löschen?"
 
 #: server_synchronize.php:449 server_synchronize.php:894
 msgid "Apply Selected Changes"
