Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -6030,7 +6030,7 @@ msgstr "Die folgenden Abfragen wurden ausgeführt:"
 
 #: server_synchronize.php:1122
 msgid "Enter manually"
-msgstr ""
+msgstr "Manuell eingeben"
 
 #: server_synchronize.php:1123
 #, fuzzy
