--- a/po/de.po
+++ b/po/de.po
@@ -6045,7 +6045,7 @@ msgstr "Konfiguration: %s"
 
 #: server_synchronize.php:1167
 msgid "Socket"
-msgstr ""
+msgstr "Socket"
 
 #: server_synchronize.php:1213
 msgid ""
