Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:27+0200\n"
+"PO-Revision-Date: 2010-05-25 11:28+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6082,7 +6082,7 @@ msgid ""
 "You are not using a secure connection; all data (including potentially "
 "sensitive information, like passwords) is transferred unencrypted!"
 msgstr ""
-"Sie benutzen keine sichere Verbindung. Alle Daten (einschließlich sensitive "
+"Sie benutzen keine sichere Verbindung. Alle Daten (einschließlich sensitiver "
 "Information wie Passwörter) werden unverschlüsselt übertragen!"
 
 #: setup/frames/index.inc.php:87 setup/frames/menu.inc.php:17
