--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:28+0200\n"
+"PO-Revision-Date: 2010-05-25 11:29+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6116,7 +6116,7 @@ msgstr "- kein -"
 
 #: setup/frames/index.inc.php:196 setup/lib/messages.inc.php:51
 msgid "Default server"
-msgstr "Standardserver"
+msgstr "Voreingestellter Server"
 
 #: setup/frames/index.inc.php:206 setup/lib/messages.inc.php:66
 msgid "End of line"
