--- a/po/de.po
+++ b/po/de.po
@@ -6120,7 +6120,7 @@ msgstr "Voreingestellter Server"
 
 #: setup/frames/index.inc.php:206 setup/lib/messages.inc.php:66
 msgid "End of line"
-msgstr "Zeilenenden"
+msgstr "Zeilen-Ende"
 
 #: setup/frames/index.inc.php:211 setup/lib/messages.inc.php:61
 msgid "Display"
