Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:29+0200\n"
+"PO-Revision-Date: 2010-05-25 11:30+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6156,7 +6156,7 @@ msgstr "Hauptframe"
 
 #: setup/frames/servers.inc.php:28 setup/lib/messages.inc.php:272
 msgid "Edit server"
-msgstr "Server editieren"
+msgstr "Server bearbeiten"
 
 #: setup/frames/servers.inc.php:37 setup/lib/messages.inc.php:241
 msgid "Add a new server"
