--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:30+0200\n"
+"PO-Revision-Date: 2010-05-25 11:31+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6187,8 +6187,8 @@ msgstr "Zeichensatzkonvertierung erlauben."
 msgid ""
 "If enabled user can enter any MySQL server in login form for cookie auth"
 msgstr ""
-"Wenn aktiv kann ein Benutzer die Adresse eines beliebigen Servers beim Login "
-"angeben."
+"Wenn aktiv, kann ein Benutzer beim Login die Adresse eines beliebigen "
+"Servers für \"cookie auth\" angeben."
 
 #: setup/lib/messages.inc.php:18
 msgid ""
