Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:31+0200\n"
+"PO-Revision-Date: 2010-05-25 11:32+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6199,13 +6199,13 @@ msgid ""
 "protection may not be reliable if your IP belongs to an ISP where thousands "
 "of users, including you, are connected to."
 msgstr ""
-"Diese [a@?page=form&amp;formset=features#tab_Security]Option[/a]This [a@?"
-"page=form&amp;formset=features#tab_Security]option[/a] sollte deaktiviert "
-"sein, weil sie Angreifern erlaubt Bruteforce-Attacken auf beliebige (auch "
-"fremde) MySQL-Servern durchzuführen. Wenn Sie der Meinung sind, dass diese "
-"Option unbedingt notwendig ist, sollten Sie die [a@?page=form&amp;"
-"formset=features#tab_Security]trusted proxy list[/a] verwenden. IP-basierte "
-"Regeln sind aber nie wirklich ausreichend."
+"Diese [a@?page=form&amp;formset=features#tab_Security]Option[/a]This "
+"[a@?page=form&amp;formset=features#tab_Security]option[/a] sollte "
+"deaktiviert sein, weil sie Angreifern erlaubt Bruteforce-Attacken auf "
+"beliebige (auch fremde) MySQL-Servern durchzuführen. Wenn Sie der Meinung "
+"sind, dass diese Option unbedingt notwendig ist, sollten Sie die "
+"[a@?page=form&amp;formset=features#tab_Security]trusted proxy list[/a] "
+"verwenden. IP-basierte Regeln sind aber nie wirklich ausreichend."
 
 #: setup/lib/messages.inc.php:19
 msgid "Allow login to any MySQL server"
