Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:33+0200\n"
+"PO-Revision-Date: 2010-05-25 11:34+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6238,9 +6238,10 @@ msgid ""
 "so a key was automatically generated for you. It is used to encrypt cookies; "
 "you don't need to remember it."
 msgstr ""
-"Sie hatten keinen Blowfish-Schlüssel angegeben, aber cookie-Authentisierung "
-"aktiviert, deshalb wurde ein Schlüssel automatisch erzeugt. Er wird zum "
-"Verschlüsseln der Cookies verwendet und muss nicht gemerkt werden."
+"Sie hatten keinen Blowfish-Schlüssel angegeben, aber Cookie-"
+"Authentifizierung aktiviert, deshalb wurde ein Schlüssel automatisch "
+"erzeugt. Er wird zum Verschlüsseln der Cookies verwendet und muss nicht "
+"gemerkt werden."
 
 #: setup/lib/messages.inc.php:25
 msgid "Blowfish secret"
