Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:35+0200\n"
+"PO-Revision-Date: 2010-05-25 11:36+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6296,9 +6296,9 @@ msgid ""
 "level directory as described in [a@../Documentation.html#setup_script]"
 "documentation[/a]. Otherwise you will be only able to download or display it."
 msgstr ""
-"Bitte erstellen Sie den Ordner [em]config[/em] im phpMyAdmin-Verzeichnis, "
-"und setzen Sie der Berechtigungen entsprechend. Ansonsten können Sie die "
-"Konfiguration nur herunterladen bzw. anzeigen."
+"Bitte erstellen Sie den Ordner [em]config[/em] im phpMyAdmin-"
+"hauptverzeichnis, und setzen Sie der Berechtigungen entsprechend. Ansonsten "
+"können Sie die Konfiguration nur herunterladen bzw. anzeigen."
 
 #: setup/lib/messages.inc.php:35
 msgid ""
