Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:40+0200\n"
+"PO-Revision-Date: 2010-05-25 11:41+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -2989,9 +2989,8 @@ msgid "Export triggers"
 msgstr "Export-Auslöser"
 
 #: libraries/export/xml.php:39
-#, fuzzy
 msgid "Export views"
-msgstr "Export als %s"
+msgstr "Export-Ansichten"
 
 #: libraries/export/xml.php:45
 #, fuzzy
