--- a/po/de.po
+++ b/po/de.po
@@ -2993,9 +2993,8 @@ msgid "Export views"
 msgstr "Export-Ansichten"
 
 #: libraries/export/xml.php:45
-#, fuzzy
 msgid "Export contents"
-msgstr "Voreinstellung für Export"
+msgstr "Export-Inhalte"
 
 #: libraries/footer.inc.php:184 libraries/footer.inc.php:195
 #: libraries/footer.inc.php:198
