--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:41+0200\n"
+"PO-Revision-Date: 2010-05-25 11:42+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -4184,9 +4184,8 @@ msgid "Master status"
 msgstr "Master-Status"
 
 #: libraries/replication_gui.lib.php:105
-#, fuzzy
 msgid "Slave status"
-msgstr "Zeige den Slave-Status"
+msgstr "Slave-Status"
 
 #: libraries/replication_gui.lib.php:114 libraries/sql_query_form.lib.php:445
 #: server_status.php:626 server_variables.php:52
