--- a/po/de.po
+++ b/po/de.po
@@ -5605,9 +5605,8 @@ msgid "This server is configured as master in a replication process."
 msgstr ""
 
 #: server_replication.php:184 server_status.php:281
-#, fuzzy
 msgid "Show master status"
-msgstr "Zeige den Slave-Status"
+msgstr "Zeige den Master-Status"
 
 #: server_replication.php:187
 msgid "Show connected slaves"
