Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:44+0200\n"
+"PO-Revision-Date: 2010-05-25 11:45+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6796,9 +6796,8 @@ msgid "How many rows can be inserted at one time"
 msgstr ""
 
 #: setup/lib/messages.inc.php:167
-#, fuzzy
 msgid "Number of inserted rows"
-msgstr "Anzahl der sortierten Zeilen."
+msgstr "Anzahl der eingefügten Zeilen."
 
 #: setup/lib/messages.inc.php:168
 msgid "Target for quick access icon"
