Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:45+0200\n"
+"PO-Revision-Date: 2010-05-25 11:46+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6824,9 +6824,8 @@ msgid "String that separates databases into different tree levels"
 msgstr ""
 
 #: setup/lib/messages.inc.php:174
-#, fuzzy
 msgid "Database tree separator"
-msgstr "Schablone für Datenbanknamen"
+msgstr "Trenzeichen für Datenbank-Baum"
 
 #: setup/lib/messages.inc.php:175
 msgid ""
